--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="container">
       <!-- Feedback message -->
-      <p id="greeting"></p>
+      <p class="greeting" id="greetingMessage"></p>
 
       <!-- Check-in form -->
       <form class="check-in" id="checkInForm">
